Add video companion sections to three blog posts
Introduced 'Video Companion' sections with embedded YouTube videos to the posts: 'Beyond Frameworks: Computer Science Fundamentals', 'The Modern Tech Professional's Learning Stack: A 2025 Guide', and 'The Price of Independence'. This provides readers with an alternative video format for consuming the content.

--- a/src/content/posts/beyond-frameworks-computer-science-fundamentals.mdx
+++ b/src/content/posts/beyond-frameworks-computer-science-fundamentals.mdx
@@ -26,6 +26,12 @@ So this isn't just about Computer Science fundamentals. This is about recognizin
 
 *Curious about our mission and vision for transforming tech education? Visit [Skill-Wanderer.com](https://skill-wanderer.com/) to learn more about how we're building a learning platform that truly understands the learner's journey.*
 
+## Video Companion
+
+For those who prefer video content, you can watch this analysis as a video companion:
+
+<iframe src="https://www.youtube.com/embed/HcylDqucX1U?si=PP5hfastKTNvUTSB" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="width: 100%; height: 315px; margin: 1rem 0;"></iframe>
+
 ---
 
 If you're anything like me, you'll never forget the first time you built a real application with a modern framework. That moment when the code compiles, the server runs, and the thing you imagined on your screen comes to life… it's pure magic. You feel like you have a superpower. You can build, you can create, you are a developer.
