--- a/src/content/posts/the-modern-tech-professionals-learning-stack-a-2025-guide.mdx
+++ b/src/content/posts/the-modern-tech-professionals-learning-stack-a-2025-guide.mdx
@@ -44,6 +44,12 @@ As someone with professional experience as a developer, a project manager, and a
 
 Most importantly, we will embrace the concept of a "Learning Stack." The era of relying on a single source for knowledge is over. The modern tech professional needs a versatile, curated toolkit of different platforms for different tasks. This post is your high-level map of the terrain. In the coming weeks, we will dive deep into each platform individually.
 
+## Video Companion
+
+For those who prefer video content, you can watch this analysis as a video companion:
+
+<iframe src="https://www.youtube.com/embed/xU-AK7lFwfw?si=BD9VopZzIMKRQhYy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="width: 100%; height: 315px; margin: 1rem 0;"></iframe>
+
 **📊 [View the Complete Interactive Infographic](/infographics/blog/the-modern-tech-professionals-learning-stack-a-2025-guide/learning-stack-infographic.html)** - Get a visual overview of all the platforms, comparisons, and learning stack combinations covered in this guide.
 
 ---
