--- a/src/content/posts/chronicles-of-a-home-data-center-day-1.mdx
+++ b/src/content/posts/chronicles-of-a-home-data-center-day-1.mdx
@@ -31,6 +31,20 @@ Couple that with the fact that I have a stable internet connection here in Vietn
 
 But what exactly is a 'home data center' in this context? For me, it doesn't necessarily mean rows of humming servers in a dedicated, climate-controlled room (though maybe one day!). It can start much smaller, maybe with just a single machine, focusing on specific goals. This series, starting with today's "Day -1" planning post, will chronicle that journey.
 
+**Watch the Video Version**: If you prefer video content, here's the complete video walkthrough of this Day -1 planning and preparation phase:
+
+<div class="aspect-w-16 aspect-h-9 rounded-lg overflow-hidden border-2 shadow-xl mb-8">
+  <iframe 
+    src="https://www.youtube.com/embed/lwaBLTkGwCQ?si=vWxcgurnegUOqetO" 
+    frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    referrerpolicy="strict-origin-when-cross-origin" 
+    allowfullscreen
+    title="Chronicles of a Home Data Center: Day -1 Planning Video Guide"
+    class="w-full h-full">
+  </iframe>
+</div>
+
 ## The Allure: Why Build a Home Data Center?
 
 <Image 
