Update embedded YouTube video in Udemy review post
Replaced the YouTube video iframe source URL in the Udemy review post to feature a different video.

--- a/src/content/posts/the-skill-wanderers-playbook-a-deep-dive-review-of-udemy.mdx
+++ b/src/content/posts/the-skill-wanderers-playbook-a-deep-dive-review-of-udemy.mdx
@@ -28,7 +28,7 @@ Today, we're doing our first deep dive, and we're starting with the biggest and 
 
 <div class="aspect-w-16 aspect-h-9 rounded-lg overflow-hidden border-2 shadow-xl mb-8">
   <iframe 
-    src="https://www.youtube.com/embed/QFWqZj8HJAM?si=oR32PGmjzNv0N761" 
+    src="https://www.youtube.com/embed/x5YmvKUskhI?si=NZGcv7qwbRkhK8x4" 
     frameborder="0" 
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
     referrerpolicy="strict-origin-when-cross-origin" 
