Add Spotify podcast embeds to blog posts
Added Spotify podcast iframe embeds to multiple blog posts, providing an audio companion option alongside existing video content. Updated section titles to 'Video & Podcast Companion' where relevant for consistency.

--- a/src/content/posts/chronicles-of-a-home-data-center-day-1.mdx
+++ b/src/content/posts/chronicles-of-a-home-data-center-day-1.mdx
@@ -31,7 +31,7 @@ Couple that with the fact that I have a stable internet connection here in Vietn
 
 But what exactly is a 'home data center' in this context? For me, it doesn't necessarily mean rows of humming servers in a dedicated, climate-controlled room (though maybe one day!). It can start much smaller, maybe with just a single machine, focusing on specific goals. This series, starting with today's "Day -1" planning post, will chronicle that journey.
 
-**Watch the Video Version**: If you prefer video content, here's the complete video walkthrough of this Day -1 planning and preparation phase:
+**Watch the Video Version or Listen to the Podcast**: If you prefer video content, here's the complete video walkthrough of this Day -1 planning and preparation phase:
 
 <div class="aspect-w-16 aspect-h-9 rounded-lg overflow-hidden border-2 shadow-xl mb-8">
   <iframe 
@@ -44,6 +44,10 @@ But what exactly is a 'home data center' in this context? For me, it doesn't nec
     class="w-full h-full">
   </iframe>
 </div>
+
+Or if you prefer audio format, you can listen to the podcast version on Spotify:
+
+<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/episode/6aMXtkTWvAk7DS5Wx4ilnl?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
 ## The Allure: Why Build a Home Data Center?
 
