--- a/src/content/posts/the-skill-wanderers-playbook-a-deep-dive-review-of-udemy.mdx
+++ b/src/content/posts/the-skill-wanderers-playbook-a-deep-dive-review-of-udemy.mdx
@@ -24,7 +24,7 @@ Welcome back to the Skill-Wanderer's Playbook, the series where we build the ult
 
 Today, we're doing our first deep dive, and we're starting with the biggest and most chaotic tool in the shed: **Udemy**.
 
-**Watch the Video Version**: If you prefer video content, here's the complete video walkthrough of this comprehensive Udemy review and playbook:
+**Watch the Video Version or Listen to the Podcast**: If you prefer video content, here's the complete video walkthrough of this comprehensive Udemy review and playbook:
 
 <div class="aspect-w-16 aspect-h-9 rounded-lg overflow-hidden border-2 shadow-xl mb-8">
   <iframe 
@@ -37,6 +37,10 @@ Today, we're doing our first deep dive, and we're starting with the biggest and 
     class="w-full h-full">
   </iframe>
 </div>
+
+Or if you prefer audio format, you can listen to the podcast version on Spotify:
+
+<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/episode/7yQ77BYMvxucsSwe9Fzhpr?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
 > **🎯 Quick Reference:** Want a visual summary of this entire playbook? Check out our [interactive infographic](/infographics/blog/the-skill-wanderers-playbook-a-deep-dive-review-of-udemy/udemy-playbook-infographic.html) for all the key strategies, rules, and insights at a glance.
 
