--- a/src/content/posts/beyond-frameworks-computer-science-fundamentals.mdx
+++ b/src/content/posts/beyond-frameworks-computer-science-fundamentals.mdx
@@ -26,11 +26,15 @@ So this isn't just about Computer Science fundamentals. This is about recognizin
 
 *Curious about our mission and vision for transforming tech education? Visit [Skill-Wanderer.com](https://skill-wanderer.com/) to learn more about how we're building a learning platform that truly understands the learner's journey.*
 
-## Video Companion
+## Video & Podcast Companion
 
 For those who prefer video content, you can watch this analysis as a video companion:
 
 <iframe src="https://www.youtube.com/embed/HcylDqucX1U?si=PP5hfastKTNvUTSB" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="width: 100%; height: 315px; margin: 1rem 0;"></iframe>
+
+Or if you prefer audio format, you can listen to the podcast version on Spotify:
+
+<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/episode/64tkCmkFbibYKvUAXfRYU7?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
 ---
 
