--- a/src/content/posts/the-price-of-independence.mdx
+++ b/src/content/posts/the-price-of-independence.mdx
@@ -27,13 +27,18 @@ So, if you're curious about the real-world economics of self-hosting versus rely
 
 > **A Note on Transparency:** Please be aware that this blog is a personal project. I do not use affiliate marketing links or display any advertisements. All mentions of products, services, or companies (such as [AWS](https://en.wikipedia.org/wiki/Amazon_Web_Services), [Hostinger](https://www.hostinger.com/), [Orange Pi](https://www.orangepi.org/), [ThinkPad](https://en.wikipedia.org/wiki/ThinkPad), etc.) are based purely on my own research, personal experiences, and opinions, and I receive no financial compensation or benefit from these mentions.
 
-## Video Companion
+## Video & Podcast Companion
 
 For those who prefer video content, you can watch this analysis as a video companion:
 
 <iframe src="https://www.youtube.com/embed/_IUKO6Re6ME?si=m4vGtx_9wwBtngRC" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="width: 100%; height: 315px; margin: 1rem 0;"></iframe>
 
+Or if you prefer audio format, you can listen to the podcast version on Spotify:
+
+<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/episode/1Mk76VHacb2K2paaU6uia3?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
 ## The Bill Arrives: Tallying Up One Month of My Home Data Center
+
 
 <Image 
   src={billArrives}
