Add infographic and link to Tanegashima Shift post
Added a detailed infographic HTML file illustrating the historical parallel between gunpowder and AI in software development. Updated the blog post to include a prominent link to the infographic and corrected a reference from GPT-4 to GPT-5 for consistency.

--- a/src/content/posts/the-tanegashima-shift-why-ai-is-the-gunpowder-that-ends-the-era-of-the-code-samurai.mdx
+++ b/src/content/posts/the-tanegashima-shift-why-ai-is-the-gunpowder-that-ends-the-era-of-the-code-samurai.mdx
@@ -11,6 +11,8 @@ tags: ["AI", "Software Development", "Career", "History", "Japanese History", "F
 
 import { Image } from 'astro:assets';
 
+> **📊 Visual Summary**: Want a quick overview? Check out our [Tanegashima Shift infographic](/infographics/blog/the-tanegashima-shift-why-ai-is-the-gunpowder-that-ends-the-era-of-the-code-samurai/tanegashima-shift-infographic.html) that illustrates the historical parallel between the gunpowder revolution and AI's disruption of software development.
+
 The year is 1575. The location is the plains of Nagashino, Japan.
 
 On one side stands the Takeda clan, legendary for their cavalry—the terrifying "Red Devils." These were men who had spent decades mastering the way of the horse and the spear. They were the "10x Engineers" of feudal warfare: elite, highly paid, and devastatingly effective in single combat.
@@ -117,7 +119,7 @@ The most profound change Nobunaga introduced was not just the gun, but **the spe
 
 We are about to see a massive influx of **"Conscript Coders."** In the past, you needed a 4-year Computer Science degree or an intense bootcamp to be useful. That was your "sword training."
 
-With AI, a new generation is coming to market much faster. They are the **New Ashigaru**. They might not understand memory pointers or Big O notation, but with Copilot and GPT-4, they can build a functioning app in weeks. They will flood the market, driving down the cost of basic coding labor.
+With AI, a new generation is coming to market much faster. They are the **New Ashigaru**. They might not understand memory pointers or Big O notation, but with Copilot and GPT-5, they can build a functioning app in weeks. They will flood the market, driving down the cost of basic coding labor.
 
 ### The Educational Gap
 
