Add images and embed in Wanderer's Log #3 post
Add five new images for the Wanderer's Log #3 blog post and update the MDX content to embed a hero image and section images (wake-up call, AI vs engineers, keyboard-vs-pen, curriculum pivot, and looking ahead). These visual assets improve readability and illustrate key sections of the AI-first curriculum post.

--- a/src/content/posts/wanderers-log-3-the-tet-reflection-why-skill-wanderer-is-going-ai-first.mdx
+++ b/src/content/posts/wanderers-log-3-the-tet-reflection-why-skill-wanderer-is-going-ai-first.mdx
@@ -13,6 +13,8 @@ _Disclaimer: I am not affiliated with any of the brands or products mentioned in
 
 > **📊 Visual Summary**: Want a quick overview? Check out our [AI-First Curriculum infographic](/infographics/blog/wanderers-log-3-the-tet-reflection-why-skill-wanderer-is-going-ai-first/ai-first-curriculum-infographic.html) that highlights the pivot, the three pillars, and the new learning path.
 
+<img src="/images/blog/wanderers-log-3-the-tet-reflection-why-skill-wanderer-is-going-ai-first/hero.jpg" alt="Wanderer's Log #3: The Tết Reflection — Why Skill-Wanderer Is Going AI-First" class="w-full h-auto rounded-lg shadow-lg mb-8" />
+
 ## When High Achievers Get a Holiday
 
 Many high achievers don't truly appreciate holidays and weekends. They want to get their hands dirty, to keep building. But those occasions, when the world slows down, are an invitation for something most of us rarely get: the space for deep work and deep reflection.
@@ -20,6 +22,8 @@ Many high achievers don't truly appreciate holidays and weekends. They want to g
 This Tết — the Vietnamese Lunar New Year — gave me exactly that. While the rest of the world celebrated, I found myself thinking deeply about how to operate Skill-Wanderer as a non-profit social enterprise. As I've transitioned from a charity model to a non-profit social enterprise, there's been a lot to figure out. The operational side of how Skill-Wanderer runs will be a topic for a future post, but one of the most important realizations that came out of this reflection was about our **education methodology** — and it demands a pivot.
 
 ## The Wake-Up Call: Our Curriculum Was Falling Behind
+
+<img src="/images/blog/wanderers-log-3-the-tet-reflection-why-skill-wanderer-is-going-ai-first/the-wake-up-call.jpg" alt="The Wake-Up Call: Our Curriculum Was Falling Behind" class="w-full h-auto rounded-lg shadow-lg mb-6" />
 
 While reviewing our current offerings, I came to a hard conclusion: our tester course is in a reasonable place for now, but our developer course quality was becoming **dangerously obsolete**.
 
@@ -31,6 +35,8 @@ Then Claude Opus 4.5 arrived, and everything shifted. I found that the vast majo
 
 ## No, AI Won't Replace Software Engineers (Yet)
 
+<img src="/images/blog/wanderers-log-3-the-tet-reflection-why-skill-wanderer-is-going-ai-first/ai-wont-replace-engineers.jpg" alt="AI Won't Replace Software Engineers Yet" class="w-full h-auto rounded-lg shadow-lg mb-6" />
+
 Now, some of you may fear that AI will completely replace software engineers. Based on my real-world experience, **that is not true — at least not yet**.
 
 I've been working with partners, and recently we collaborated on a complex payment feature using [Stripe](https://stripe.com/). This is exactly the kind of work where AI falls short. The AI simply did not know how to piece together something this complex and security-sensitive. It left behind a mess of loose ends — leftover code, incomplete integrations, and logic gaps that needed to be cleaned up.
@@ -38,6 +44,8 @@ I've been working with partners, and recently we collaborated on a complex payme
 But here's the critical nuance: **no manual coding from scratch was needed**. What was needed was programming knowledge, the ability to read and understand syntax, and the architectural thinking to know how the pieces fit together. The AI could write the code; a human needed to direct and verify it.
 
 ## The Root Problem: Our Curriculum Wasn't AI-Tool-First
+
+<img src="/images/blog/wanderers-log-3-the-tet-reflection-why-skill-wanderer-is-going-ai-first/keyboard-vs-pen-analogy.jpg" alt="The Keyboard vs Pen Analogy — Old Way vs New Way" class="w-full h-auto rounded-lg shadow-lg mb-6" />
 
 This realization exposed a fundamental flaw in our curriculum. We were teaching learners to write code manually first, and then introducing AI tools as an afterthought. Some of our mentees were struggling to adopt AI-first workflows because the old way of teaching insisted they write every line by hand.
 
@@ -52,6 +60,8 @@ And here's the key insight: **you can always go back and learn the paper-and-pen
 This approach also has a profound secondary benefit: it dramatically **accelerates the speed** at which learners can start coding and contributing to real projects. Once they're productive, they can then start tackling higher-order problems like system architecture, design patterns, and security — the things that truly matter and that AI still can't do on its own.
 
 ## The Pivot: Skill-Wanderer's New AI-First Curriculum
+
+<img src="/images/blog/wanderers-log-3-the-tet-reflection-why-skill-wanderer-is-going-ai-first/the-ai-first-curriculum-pivot.jpg" alt="The AI-First Curriculum Pivot — Three Pillars" class="w-full h-auto rounded-lg shadow-lg mb-6" />
 
 After this reflection, Skill-Wanderer's curriculum is pivoting. Here are the core changes:
 
@@ -74,6 +84,8 @@ This is where the magic happens. By designing assignments that pair learners wit
 And here's the beautiful payoff: a learner who can work effectively with a lower-end model will be **extraordinarily effective** with a high-end model like Claude Opus 4.6. They'll have the code literacy, the debugging instincts, and the architectural awareness to leverage the best tools to their fullest potential.
 
 ## Looking Ahead
+
+<img src="/images/blog/wanderers-log-3-the-tet-reflection-why-skill-wanderer-is-going-ai-first/looking-ahead.jpg" alt="Looking Ahead — The Future of Skill-Wanderer" class="w-full h-auto rounded-lg shadow-lg mb-6" />
 
 This isn't just a curriculum update — it's a fundamental shift in how we think about tech education. The world has changed. AI isn't coming; it's here. And the most responsible thing we can do as educators is prepare our learners for the world as it is, not the world as it was.
 
